--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/settingsFragment">
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.gachon.ttuckttak.ui.login.settings.SettingsFragment"
+        android:name="com.gachon.ttuckttak.ui.setting.SettingsFragment"
         android:label="fragment_settings">
         <action
             android:id="@+id/action_settingsFragment_to_settingsProfileFragment"
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/settingsAlertFragment"
-        android:name="com.gachon.ttuckttak.ui.login.settings.SettingsAlertFragment"
+        android:name="com.gachon.ttuckttak.ui.setting.SettingsAlertFragment"
         android:label="fragment_settings_alert">
         <action
             android:id="@+id/action_settingsAlertFragment_to_settingsFragment"
@@ -25,7 +25,7 @@
     </fragment>
     <fragment
         android:id="@+id/settingsProfileFragment"
-        android:name="com.gachon.ttuckttak.ui.login.settings.SettingsProfileFragment"
+        android:name="com.gachon.ttuckttak.ui.setting.SettingsProfileFragment"
         android:label="fragment_settings_profile">
         <action
             android:id="@+id/action_settingsProfileFragment_to_settingsFragment"
