--- a/app/src/main/res/drawable/switch_track_on.xml
+++ b/app/src/main/res/drawable/switch_track_on.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#4cd964" />
+    <solid android:color="@color/main_theme_blue" />
     <corners android:radius="15dp" />
     <size android:height="30dp"
         android:width="52dp" />
