--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -269,6 +269,7 @@
         android:fontFamily="@font/noto_sans_bold"
         android:text="@string/logout"
         android:textColor="@color/black"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/ttuckttakVersion"
         app:layout_constraintStart_toStartOf="@+id/ttuckttakVersion"
         app:layout_constraintTop_toBottomOf="@+id/ttuckttakVersion" />
